src/assets/gallery.css
.gallery__items {
    display: flex;
    flex-direction: column;
    gap: 20px;
}

.gallery__items section.active {
    background: var(--bg);
    position: fixed;
    top: 0;
    left: 0;
    width: 100vw;
    height: 100vh;
    z-index: 9999;
    display: flex;
    align-items: center;
    justify-content: center;
}
.gallery__items section .content {
    width: 97vw;
    max-width: var(--max-width);
    height: min-content;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    border-radius: 10px;
    overflow: hidden;
    cursor: pointer;
    gap: 2px;
    background: var(--bg-2);
}
.gallery__items section.active .content {
    width: auto;
    max-width: 140ch;
    max-height: 90vh;
}
.gallery__items section.active .content .display {
    max-height: calc(90vh - 6ch);
}
.gallery__items section button {
    width: 100%;
    border-radius: unset;
}
.gallery__items section .content .display {
    width: 100%;
    height: 100%;    
    user-select: none;
    -webkit-user-drag: none;
}



/**
 * Grid view
*/
body.grid__view .gallery__items {
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: center;
}
body.grid__view .gallery__items section:not(.active) { background-color: var(--bg-2); border-radius: 10px; }
body.grid__view .gallery__items section:not(.active) .display { object-fit: contain; height: 100%; }

/**
 * List view
*/
body:not(.list__view) .gallery__items section p, body.list__view .gallery__items section.active p { display: none; }
body .gallery__items section p {
    text-overflow: ellipsis;
    overflow: hidden;
    flex-grow: 1;
    white-space: nowrap;
}
body.list__view .gallery__items section:not(.active) .content {
    background: var(--primary);
    flex-direction: row-reverse;
    justify-content: end;
    width: 90vw;
    max-width: 140ch;
    padding: 0 20px;
}
body.list__view .gallery__items section:not(.active) .content button { width: max-content; border-radius: 10px; }
body.list__view .gallery__items section:not(.active) .display { display: none; }

#item__options__modal p {
    max-width: 90vw;
    text-align: center;
}

